--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 </head>
 
 <body>
-
+    <nav>
+        <div class="logo">Brand</div>
+        <ul>
+            <li><a class="active" href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Feedback</a></li>
+        </ul>
+    </nav>
 </body>
 
 </html>
