--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <body>
     <nav>
         <div class="logo">Brand</div>
+        <input type="checkbox" id="click">
+        <label for="click" class="menu-btn">
+            <i class="fas fa-bars"></i>
+        </label>
         <ul>
             <li><a class="active" href="#">Home</a></li>
             <li><a href="#">About</a></li>
